name:                ivory-tower-lorawan
version:             0.1.0.0
synopsis:            LoRaWAN protocol
description:         implementation
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Embedded
build-type:          Simple
cabal-version:       >=1.10

data-files: support/lorawan-crypto.c
          , support/lorawan-crypto.h
          , support/aes/aes.h
          , support/aes/aescrypt.c
          , support/aes/aeskey.c
          , support/aes/aesopt.h
          , support/aes/aestab.c
          , support/aes/aestab.h
          , support/aes/brg_endian.h
          , support/aes/brg_types.h
          , support/aes/mode_hdr.h
          , support/aesmodes/cmac.c
          , support/aesmodes/cmac.h

library
  hs-source-dirs:      src
  exposed-modules:     Ivory.Tower.LoraWAN
                       Ivory.Tower.LoraWAN.Artifacts
                       Ivory.Tower.LoraWAN.Import
                       Ivory.Tower.LoraWAN.Keys
                       Ivory.Tower.LoraWAN.Pack
                       Ivory.Tower.LoraWAN.Types
                       Ivory.Tower.LoraWAN.Types.Major
                       Ivory.Tower.LoraWAN.Types.MType
                       Ivory.Tower.LoraWAN.Types.Regs
                       Ivory.Tower.LoraWAN.Types.Structs
                       Paths_ivory_tower_lorawan

  build-depends:       base >= 4.6,
                       filepath,
                       ivory,
                       ivory-artifact,
                       ivory-serialize,
                       ivory-stdlib,
                       tower

  default-language:    Haskell2010
  ghc-options:         -Wall
